--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,160 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.cart {
-  width: 24px;
+/* Header styles */
+.container {
+  background-color: rgb(245, 242, 238);
+}
+.toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+
+  background-color: antiquewhite;
+  padding: .6rem;
+  border-bottom: .2rem solid rgba(0, 0, 0, .6);
+}
+.logo {
+  border: .4rem solid #2f2666;
+  margin-left: 20px;
+}
+
+.logoText {
+  font-size: 30px;
+  font-weight: bold;
+  color: #2f2666;
+}
+.orderedProduct {
+  display: flex;
+  align-items: center;
+  align-content: space-around;
+
+  margin-right: 20px;
+}
+
+.cartSvgOrdered {
+  width: 60px;
+  height: 60px;
+  background-color: #2f2666;
+  color: white;
+  border-radius: 30px;
+  padding: 1rem;
+
+  transition: .3s background-color linear;
+
+}
+.cartSvgOrdered:hover, .amountOrderedButton:hover {
+  cursor: pointer;
+}
+.cartSvgOrdered:hover {
+  background-color: white;
+  color: #2f2666;
+  transition: .3s;
+}
+.priceOrdered {
+  font-weight: bold;
+  font-size: 17px;
+}
+.amountOrdered {
+  position: absolute;
+  margin-top: 45px;
+  margin-left: 40px;
+}
+.amountOrderedButton {
+  border: 1px solid white;
+  background-color: red;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  height: 20px;
+  width: 20px;
+}
+.bigPhoto > img {
+  width: 1920px;
+  height: 410px;
+}
+
+
+
+
+/* stylization  of the body content */
+.productsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: space-around;
+}
+.productCard {
+  padding: .5rem;
+  width: 400px;
+  height: 170px;
+  background-color: antiquewhite;
+
+  box-shadow: 2px 4px 12px 2px black;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+
+  margin-bottom: 20px;
+}
+.cardButtons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
+.cartSvg {
+  width: 25px;
   height: 25px;
+}
+.addToCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 160px;
+  height: 40px;
+  font-size: 15px;
+  color: white;
+  background-color: #2f2666;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+
+  transition: .4s background-color linear;
+}
+.addToCard:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #2f2666;
+  transition: .4s;
+}
+
+.name, .price, .origin {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.itemInfo {
+  margin: 10px;
+}
+
+.moreDetail {
+  background-color: #5140be;
+  border-radius: 10px;
+  border: none;
+  width: 160px;
+  height: 40px;
+  font-size: 15px;
+  color: white;
+  font-weight: bold;
+
+  transition: .4s background-color linear;
+}
+
+.moreDetail:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #5140be;
+  transition: .4s;
 }
