--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+button {
+  outline: none;
+}
 
 /* Header styles */
 .container {
@@ -80,9 +83,12 @@ body {
   border-radius: 10px;
   height: 20px;
   width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .bigPhoto > img {
-  width: 1920px;
+  width: 1838px;
   height: 410px;
 }
 
@@ -168,4 +174,11 @@ body {
   background-color: white;
   color: #5140be;
   transition: .4s;
+}
+
+
+@media (min-width: 1900px) {
+  .bigPhoto > img {
+    width: 1905px;
+  }
 }
