--- a/src/components/Forms/formForAddOrEditProduct/addOrEditForm.css
+++ b/src/components/Forms/formForAddOrEditProduct/addOrEditForm.css
@@ -1,50 +1,3 @@
-.showForm {
-    background-color: #2f2666;
-    cursor: pointer;
-    border-radius: 10px;
-
-    border: 2px solid antiquewhite;
-    width: 150px;
-    padding: .1rem;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.openFormButtonText {
-    color:antiquewhite;
-    font-size: 13px;
-    font-weight: bold;
-}
-.buttonShowForm {
-    padding: .2rem;
-    background-color:antiquewhite;
-    border-radius: 10px;
-    
-    cursor: pointer;
-    box-shadow: 1px 2px 10px 1px rgb(99, 97, 96);
-    margin-right: 1000px;
-}
-.openFormSvg {
-    width: 18px;
-    height: 18px;
-    color: antiquewhite;
-    margin-right: 5px;
-}
-.openForm:focus {
-    outline: none;
-}
-
-.addProductForm {
-    position: absolute;
-    border-radius: 15px;
-    background:linear-gradient(45deg, #2f2666,#534dbe);
-    padding: 1rem;
-    width: 180px;
-
-    display: none;
-}
-
 .inputField {
     width: 150px;
     font-size: 17px;
@@ -87,7 +40,7 @@
     cursor: pointer;
 }
 .submitForm:hover {
-    background: inherit;
+    background: rgb(34, 189, 34);
     color: white;
 }
 .submitForm:focus {
