--- a/src/components/Forms/EditForm/editForm.css
+++ b/src/components/Forms/EditForm/editForm.css
@@ -1,10 +1,10 @@
 .editForm {
-    position: fixed;
+    position: absolute;
     border-radius: 15px;
     background:linear-gradient(45deg, #2f2666,#534dbe);
     padding: 1rem;
     width: 180px;
-    display: none;
+    display: none; 
 }
  
 .resetFormButton, .cancelChangesButton {
@@ -18,6 +18,7 @@
     margin-top: 10px;
     font-size: 11px;
     cursor: pointer;
+    
 }
 .resetFormButton:hover {
     color: white;
