forms for edit and add products done

--- a/src/components/Forms/AddOrEditProductForm/EditForm/editForm.css
+++ b/src/components/Forms/AddOrEditProductForm/EditForm/editForm.css
@@ -1,5 +1,5 @@
 .editForm {
-    position: absolute;
+    position: fixed;
     border-radius: 15px;
     background:linear-gradient(45deg, #2f2666,#534dbe);
     padding: 1rem;
