--- a/src/components/CartPageComponents/bodyCartPage.css
+++ b/src/components/CartPageComponents/bodyCartPage.css
@@ -56,12 +56,12 @@
 
 .totalSum {
     margin-top: 30px;
-    background-color: white;
+    background-color: #2f2666;
     font-weight: bold;
     font-size: 30px;
-    border: 5px solid #2f2666;
     border-radius: 10px;
     padding: 1rem;
+    color: white;
     width: max-content;
     cursor: pointer;
     box-shadow: 2px 2px 12px 2px #2f2666;
