--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -80,4 +80,14 @@
 .link {
   text-decoration: none;
 }
+.createdProductsLinkDiv {
+  display: flex;
+  flex-direction: column;
+}
+.createdProductsLink {
+  font-size: 17px;
+  font-weight: bold;
+  color: #2f2666;
+}
+
 
