--- a/src/components/CartPage/bodyCartPage.css
+++ b/src/components/CartPage/bodyCartPage.css
@@ -1,7 +1,7 @@
 .cartPageBody {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    
     width: 1200px;
     margin: 0 auto;
 }
@@ -65,4 +65,6 @@
     width: max-content;
     cursor: pointer;
     box-shadow: 2px 2px 12px 2px #2f2666;
+    position: absolute;
+    right: 320px;
 }
