--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -80,11 +80,12 @@
 .link {
   text-decoration: none;
 }
-.createdProductsLinkDiv {
+.linkDiv {
   display: flex;
   flex-direction: column;
+  border-bottom: 2px solid #2f2666;
 }
-.createdProductsLink {
+.linkText {
   font-size: 17px;
   font-weight: bold;
   color: #2f2666;
